// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SprayBackground applies custom className if provided 1`] = `
<DocumentFragment>
  <img
    alt=""
    aria-hidden="true"
    class="pointer-events-none absolute inset-0 z-[-1] select-none overflow-hidden object-cover blur-2xl left-[200px] top-[100px]"
    data-testid="spray-bg-test-id"
    src="/images/backgrounds/spray.svg"
  />
</DocumentFragment>
`;

exports[`SprayBackground renders an img with correct default attributes 1`] = `
<DocumentFragment>
  <img
    alt=""
    aria-hidden="true"
    class="pointer-events-none absolute inset-0 z-[-1] select-none overflow-hidden object-cover blur-2xl "
    data-testid="spray-bg-test-id"
    src="/images/backgrounds/spray.svg"
  />
</DocumentFragment>
`;
